crates/vespertide-planner/src/snapshots/vespertide_planner__diff__tests__diff_tables__diff_tables@add_index.snap
---
source: crates/vespertide-planner/src/diff.rs
expression: plan.actions
---
[
    AddConstraint {
        table: "users",
        constraint: Index {
            name: None,
            columns: [
                "id",
            ],
        },
    },
]
