crates/vespertide-planner/src/snapshots/vespertide_planner__diff__tests__diff_tables__diff_tables@remove_named_index.snap
---
source: crates/vespertide-planner/src/diff.rs
expression: plan.actions
---
[
    RemoveConstraint {
        table: "users",
        constraint: Index {
            name: Some(
                "hello",
            ),
            columns: [
                "id",
            ],
        },
    },
]
